--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ future: true
 # SNS settings
 RSS: false
 #weibo_username: huxpro
-zhihu_username: 啥也不是
+zhihu_username: 45-46-14-76
 github_username: TH911
 #twitter_username: huxpro
 #facebook_username:  huxpro
