--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "要做一个优秀的 OIER <br> React Team @ Meta"
+sidebar-about-description: "要做一个优秀的 OIER "
 sidebar-avatar: https://github.com/TH911.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
