--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: TH911 Blog
 SEOTitle: TH911 Blog
-header-img: img/home-bg.jpg
+header-img: img/bg/1.jpg
 email: 3260483661@qq.com
 description: "这里是 @TH911 的个人博客，与你一起发现更大的世界 | 要做一个优秀的 OIER"
 keyword: "TH911, TSM, CFY, cfy, th911"
@@ -76,7 +76,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "要做一个优秀的 OIER "
-sidebar-avatar: https://th911.github.io/img/favicon.ico # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: img/favicon.ico # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
