--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,15 +1,15 @@
 {
-  "name": "Hux Blog",
-  "short_name": "Hux Blog",
+  "name": "TH911 Blog",
+  "short_name": "TH911 Blog",
   "description": "About an engineer & designer who loves web.",
   "icons": [{
-    "src": "icons/128.png",
+    "src": "icons/128.jpg",
     "sizes": "128x128",
-    "type": "image/png"
+    "type": "image/jpg"
   }, {
-    "src": "icons/512.png",
+    "src": "icons/512.jpg",
     "sizes": "512x512",
-    "type": "image/png"
+    "type": "image/jpg"
   }],
   "background_color": "#fff",
   "theme_color": "#000",
