--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ kramdown:
 disqus_username: hux
 
 # Netease settings
-netease_comment: true
+netease_comment: false
 
 # Analytics settings
 # Baidu Analytics
