--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,7 @@ service-worker: true
 
 # MathJax rendering for layout:page (e.g. post preview)
 page-mathjax: true
+post-mathjax: true
 
 # Friends
 friends:
