--- a/_config.yml
+++ b/_config.yml
@@ -89,6 +89,7 @@ service-worker: true
 # MathJax rendering for layout:page (e.g. post preview)
 page-mathjax: true
 post-mathjax: true
+keynote-mathjax: true
 
 # Friends
 friends:
