--- a/_config.yml
+++ b/_config.yml
@@ -60,13 +60,10 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-#disqus_username: hux
+disqus_username: hux
 
 # Netease settings
 netease_comment: false
-
-# Changyan settings
-changyan_comment: true
 
 # Analytics settings
 # Baidu Analytics
