--- a/_config.yml
+++ b/_config.yml
@@ -90,9 +90,14 @@ chrome-tab-theme-color: "#000000"
 service-worker: true
 
 # MathJax rendering for layout:page (e.g. post preview)
-page-mathjax: true
-post-mathjax: true
-keynote-mathjax: true
+page-mathjax: false
+post-mathjax: false
+keynote-mathjax: false
+
+#KaTeX rendering
+page-katex: true
+post-katex: true
+keynote-katex: true
 
 # Friends
 friends:
