--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ changyan_comment: true
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "要做一个优秀的 OIER "
-sidebar-avatar: https://cfyy.us.kg/img/favicon.ico # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: ../img/favicon.ico # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
