--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -15,5 +15,6 @@
   "theme_color": "#000",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "scope": "/"
 }
