--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -7,8 +7,20 @@
     "sizes": "128x128",
     "type": "image/png"
   }, {
+    "src": "icons/180.png",
+    "sizes": "180x180",
+    "type": "image/png"
+  }, {
+    "src": "icons/192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }, {
     "src": "icons/512.png",
     "sizes": "512x512",
+    "type": "image/png"
+  }, {
+    "src": "icons/1024.png",
+    "sizes": "1024x1024",
     "type": "image/png"
   }],
   "background_color": "#fff",
