--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -25,8 +25,8 @@
   }],
   "background_color": "#fff",
   "theme_color": "#000",
-  "start_url": "https://th911.us.kg/",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "scope": "https://th911.us.kg/"
+  "scope": "/"
 }
