Disable Service Worker

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ featured-condition-size: 5 # A tag will be featured if the size of it is more th
 
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
-service-worker: true
+service-worker: false
 
 #KaTeX rendering
 katex: true
